--- a/static/shop.css
+++ b/static/shop.css
@@ -46,6 +46,9 @@ html, body, .container{
 
 .leftcolumn li{
     margin: 15px;
+    display : table;
+    border: solid #efefef;
+    border-radius: 5px;
 }
 
 .leftcolumn article {
@@ -108,11 +111,15 @@ img {
     font-size: 24px;
     text-align: left;
     align-self: center;
+    border: solid #efefef;
+    border-radius: 5px;
 }
 
 .productBrand {
     font-size: 20px;
     text-align: left;
+    border: solid #efefef;
+    border-radius: 5px;
 }
 
 .cart-btn {
@@ -144,5 +151,5 @@ img {
 }
 
 ul {
-    list-style-type: "- ";
+    list-style-type: none;
 }
