changed eval and calibration task

--- a/templates/calibration.html
+++ b/templates/calibration.html
@@ -42,6 +42,9 @@
 
 <div>
     <article>Bitte befolgen Sie die Anweisungen der Aufsichtsperson!</article>
+    <article>Bitte bewege deinen Kopf nach der Kalibrierung so wenig wie möglich und
+        verlasse den Bildschirm nicht mit deinem Blick. Versuche außerdem dir nicht mit
+        den Händen in dein Gesicht zu greifen.</article>
 </div>
 </body>
 </html>
